sumo/tests/netgen/grid/errors/grid_y_length__9_9/errors.netgen
Error: The distance between nodes must be at least 10m in both directions.
Quitting (on error).
